test/types/records/split-init/different-types-in-conditional.good
different-types-in-conditional.chpl:3: In function 'test':
different-types-in-conditional.chpl:9: error: Split initialization uses multiple types; another initialization has type int(64) but this initialization has type string
different-types-in-conditional.chpl:16: error: Split initialization uses multiple types; another initialization has type real(64) but this initialization has type int(64)
different-types-in-conditional.chpl:21: error: Cannot assign to int(64) from real(64)
